// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App.vue matches snapshots: DoneLoading 1`] = `
<div id="app" class="d-flex flex-column vh-100">
  <site-header-stub class="header"></site-header-stub>
  <main class="page-content">
    <masthead-stub></masthead-stub>
    <div class="d-flex justify-content-center align-content-center mt-5 mb-5">
      <b-spinner-stub type="border" label="Loading..." role="status" tag="span" class="spinner"></b-spinner-stub>
    </div>
  </main>
  <site-footer-stub class="footer mt-auto"></site-footer-stub>
</div>
`;

exports[`App.vue matches snapshots: Loading 1`] = `
<div id="app" class="d-flex flex-column vh-100">
  <site-header-stub class="header"></site-header-stub>
  <main class="page-content">
    <masthead-stub></masthead-stub>
    <!---->
    <!---->
  </main>
  <site-footer-stub class="footer mt-auto"></site-footer-stub>
</div>
`;
